force-app/main/default/objects/Mobile__c/fields/Discount_Status__c.field-meta.xml
<CustomField>
    <fullName>Discount_Status__c</fullName>
    <label>Discount Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>