force-app/main/default/objects/Mobile__c/fields/Hard_Disk__c.field-meta.xml
<CustomField>
    <fullName>Hard_Disk__c</fullName>
    <label>Hard Disk</label>
    <length>20</length>
    <type>Text</type>
</CustomField>