force-app/main/default/objects/Mobile__c/fields/Processor__c.field-meta.xml
<CustomField>
    <fullName>Processor__c</fullName>
    <label>Processor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.1GH</fullName>
            </value>
            <value>
                <fullName>0.5GH</fullName>
            </value>
            <value>
                <fullName>0.8GH</fullName>
            </value>
            <value>
                <fullName>1GH</fullName>
            </value>
            <value>
                <fullName>1.5GH</fullName>
            </value>
            <value>
                <fullName>2GH</fullName>
            </value>
            <value>
                <fullName>2.5GH</fullName>
            </value>
            <value>
                <fullName>3GH</fullName>
            </value>
            <value>
                <fullName>3.5GH</fullName>
            </value>
            <value>
                <fullName>4GH</fullName>
            </value>
            <value>
                <fullName>4.5GH</fullName>
            </value>
            <value>
                <fullName>5GH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>