force-app/main/default/objects/Mobile__c/fields/Ram__c.field-meta.xml
<CustomField>
    <fullName>Ram__c</fullName>
    <label>Ram</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1GB</fullName>
            </value>
            <value>
                <fullName>2GB</fullName>
            </value>
            <value>
                <fullName>4GB</fullName>
            </value>
            <value>
                <fullName>8GB</fullName>
            </value>
            <value>
                <fullName>12GB</fullName>
            </value>
            <value>
                <fullName>16GB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>